force-app/main/default/objects/Item__c/fields/Actual_12_Month_Spares_Orders__c.field-meta.xml
<CustomField>
    <fullName>Actual_12_Month_Spares_Orders__c</fullName>
    <label>Actual 12 Month Spares Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>