force-app/main/default/objects/Item__c/fields/Actual_Avg_Days_Between_Failures__c.field-meta.xml
<CustomField>
    <fullName>Actual_Avg_Days_Between_Failures__c</fullName>
    <label>Actual Avg Days Between Failures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>