force-app/main/default/objects/Item__c/fields/At_Vendor__c.field-meta.xml
<CustomField>
    <fullName>At_Vendor__c</fullName>
    <label>At Vendor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>