force-app/main/default/objects/Item__c/fields/Awaiting_Return__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Return__c</fullName>
    <label>Awaiting Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>