force-app/main/default/objects/Item__c/fields/Central_Spare__c.field-meta.xml
<CustomField>
    <fullName>Central_Spare__c</fullName>
    <label>Central Spare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>