force-app/main/default/objects/Item__c/fields/Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Compatibility__c</fullName>
    <label>Compatibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-way</fullName>
            </value>
            <value>
                <fullName>Two-way</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>