force-app/main/default/objects/Item__c/fields/Count_of_Child_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Child_Items__c</fullName>
    <label>Count of Child Items</label>
    <summaryForeignKey>Interchangeable_Part__c.Parent_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>