force-app/main/default/objects/Item__c/fields/Deletion_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Indicator__c</fullName>
    <label>Deletion Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>