force-app/main/default/objects/Item__c/fields/Excess_Spares_Bad__c.field-meta.xml
<CustomField>
    <fullName>Excess_Spares_Bad__c</fullName>
    <label>Excess Spares Bad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>