force-app/main/default/objects/Item__c/fields/Failure_Rate__c.field-meta.xml
<CustomField>
    <fullName>Failure_Rate__c</fullName>
    <label>Failure Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>