force-app/main/default/objects/Item__c/fields/Failures_Repair__c.field-meta.xml
<CustomField>
    <fullName>Failures_Repair__c</fullName>
    <label>Failures Repair</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>