force-app/main/default/objects/Item__c/fields/Failures_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Failures_Same_Day__c</fullName>
    <label>Failures Same Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>