force-app/main/default/objects/Item__c/fields/Gap__c.field-meta.xml
<CustomField>
    <fullName>Gap__c</fullName>
    <label>Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>