force-app/main/default/objects/Item__c/fields/Gap_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gap_Cost__c</fullName>
    <label>Gap Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>