force-app/main/default/objects/Item__c/fields/In_Field__c.field-meta.xml
<CustomField>
    <fullName>In_Field__c</fullName>
    <label>In Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>