force-app/main/default/objects/Item__c/fields/IN_N_OUT__c.field-meta.xml
<CustomField>
    <fullName>IN_N_OUT__c</fullName>
    <label>IN-N-OUT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>