force-app/main/default/objects/Item__c/fields/Interchangeable__c.field-meta.xml
<CustomField>
    <fullName>Interchangeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interchangeable</label>
    <type>Checkbox</type>
</CustomField>