force-app/main/default/objects/Item__c/fields/Interchangeable_Code__c.field-meta.xml
<CustomField>
    <fullName>Interchangeable_Code__c</fullName>
    <label>Interchangeable Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>