force-app/main/default/objects/Item__c/fields/Intransit_To_Depots__c.field-meta.xml
<CustomField>
    <fullName>Intransit_To_Depots__c</fullName>
    <label>Intransit To Depots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>