force-app/main/default/objects/Item__c/fields/Inventory_Supply_Level__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Supply_Level__c</fullName>
    <label>Inventory Supply Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>