force-app/main/default/objects/Item__c/fields/Item_Parent__c.field-meta.xml
<CustomField>
    <fullName>Item_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Item__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>