force-app/main/default/objects/Item__c/fields/Local_Spares__c.field-meta.xml
<CustomField>
    <fullName>Local_Spares__c</fullName>
    <label>Local Spares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>