force-app/main/default/objects/Item__c/fields/Max_Keep_Spares__c.field-meta.xml
<CustomField>
    <fullName>Max_Keep_Spares__c</fullName>
    <label>Max Keep Spares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>