force-app/main/default/objects/Item__c/fields/Month_12_Failure_Rate__c.field-meta.xml
<CustomField>
    <fullName>Month_12_Failure_Rate__c</fullName>
    <label>12 Month Failure Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>