force-app/main/default/objects/Item__c/fields/Month_12_Next_Day_Orders__c.field-meta.xml
<CustomField>
    <fullName>Month_12_Next_Day_Orders__c</fullName>
    <label>12 Month Next Day Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>