force-app/main/default/objects/Item__c/fields/Month_3_Total_Orders__c.field-meta.xml
<CustomField>
    <fullName>Month_3_Total_Orders__c</fullName>
    <label>3 Month Total Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>