force-app/main/default/objects/Item__c/fields/Order_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Order_180_Days__c</fullName>
    <label>Order 180 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>