force-app/main/default/objects/Item__c/fields/Order_Next_Day__c.field-meta.xml
<CustomField>
    <fullName>Order_Next_Day__c</fullName>
    <label>Order Next Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>