force-app/main/default/objects/Item__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>No deployed data/planning (It will be read only field in salesforce and will be coming from planning)</description>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>