force-app/main/default/objects/Item__c/fields/Repair_Action__c.field-meta.xml
<CustomField>
    <fullName>Repair_Action__c</fullName>
    <label>Repair Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>AWR</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>