force-app/main/default/objects/Item__c/fields/RMA_Part_Required__c.field-meta.xml
<CustomField>
    <fullName>RMA_Part_Required__c</fullName>
    <label>RMA Part Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>