force-app/main/default/objects/Item__c/fields/Safety_Spares__c.field-meta.xml
<CustomField>
    <fullName>Safety_Spares__c</fullName>
    <label>Safety Spares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>