force-app/main/default/objects/Item__c/fields/SAP_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Part_Number__c</fullName>
    <label>SAP Part Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>