force-app/main/default/objects/Item__c/fields/SAP_Price__c.field-meta.xml
<CustomField>
    <fullName>SAP_Price__c</fullName>
    <label>SAP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>