force-app/main/default/objects/Item__c/fields/Search_Items__c.field-meta.xml
<CustomField>
    <fullName>Search_Items__c</fullName>
    <label>Search Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>