force-app/main/default/objects/Item__c/fields/Spare_3PL__c.field-meta.xml
<CustomField>
    <fullName>Spare_3PL__c</fullName>
    <label>Spare 3PL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>