force-app/main/default/objects/Item__c/fields/Spares_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Spares_Trigger__c</fullName>
    <label>Spares Trigger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>