force-app/main/default/objects/Item__c/fields/Sparing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Sparing_Strategy__c</fullName>
    <label>Sparing Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Manual Max</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>