force-app/main/default/objects/Item__c/fields/Stock_Good__c.field-meta.xml
<CustomField>
    <fullName>Stock_Good__c</fullName>
    <label>Stock Good</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>