force-app/main/default/objects/Item__c/fields/Supplier_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Part_Number__c</fullName>
    <label>Supplier Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>