force-app/main/default/objects/Item__c/fields/Total_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Total_Repairs__c</fullName>
    <label>Total Repairs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>