force-app/main/default/objects/Item__c/fields/Total_Spares__c.field-meta.xml
<CustomField>
    <fullName>Total_Spares__c</fullName>
    <label>Total Spares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>