force-app/main/default/objects/Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Items (Repair Vendor)</relationshipLabel>
    <relationshipName>Repair_Vendor_Items</relationshipName>
    <type>Lookup</type>
</CustomField>