force-app/main/default/objects/Item__c/fields/Zint__c.field-meta.xml
<CustomField>
    <fullName>Zint__c</fullName>
    <label>Zint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>