force-app/main/default/objects/Item__c/listViews/Spares_Analysis.listView-meta.xml
<ListView>
    <fullName>Spares_Analysis</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Part_Number__c</columns>
    <columns>Platform__c</columns>
    <columns>Category__c</columns>
    <columns>Primary__c</columns>
    <columns>Interchangeable__c</columns>
    <columns>Total_Deployed__c</columns>
    <columns>Total_Depots__c</columns>
    <columns>Sparing_Strategy__c</columns>
    <columns>Spares_Trigger__c</columns>
    <columns>Required_Central_Spares__c</columns>
    <columns>Local_Spares__c</columns>
    <columns>Total_Spares__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Spares Analysis</label>
</ListView>